Adding NEAT Algorithm